infra/k8s/auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: adi-dev
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: adihaimsohn/toppicks-auth
        ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  namespace: adi-dev
spec:
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP 
    port: 3000
    targetPort: 3000
