infra/k8s/product-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: adi-dev
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: adihaimsohn/toppicks-product
        ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: product-srv
  namespace: adi-dev
spec:
  selector:
    app: product
  ports:
  - name: product
    protocol: TCP 
    port: 3000
    targetPort: 3000
