infra/k8s/product-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-mongo-dep
  namespace: adi-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-mongo
  template:
    metadata:
      labels:
        app: product-mongo
    spec:
      containers:
      - name: product-mongo
        image: mongo
        ports:
          - containerPort: 27071
---

apiVersion: v1
kind: Service
metadata:
  name: product-mongo-srv
  namespace: adi-dev
spec:
  selector:
    app: product-mongo
  ports:
  - name: db 
    port: 27017
    targetPort: 27017
    protocol: TCP
