infra/k8s/user-ratings-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ratings-deployment
  namespace: adi-dev
spec:
  selector:
    matchLabels:
      app: user-ratings
  template:
    metadata:
      labels:
        app: user-ratings
    spec:
      containers:
      - name: user-ratings
        image: adihaimsohn/toppicks-user-ratings
        ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: user-ratings-srv
  namespace: adi-dev
spec:
  selector:
    app: user-ratings
  ports:
  - name: user-ratings
    protocol: TCP 
    port: 3000
    targetPort: 3000
